Fixed text spills in solution box

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -930,7 +930,7 @@ body.home .et_pb_number_counter {
           font-size: 14px;
           line-height: 130%;
 
-          @media (min-width: 981px) {
+          @media (min-width: 1300px) {
             font-size: 16px;
             line-height: 132%;
           }
